# barreleye

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  barreleye.sample.toml  deny.toml  docker-compose.yml  rustfmt.toml  settings.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cargo-deny.yml
chain/: Cargo.toml
chain/src/: bitcoin.rs  evm.rs  lib.rs  networks.rs  solana.rs
chain/src/bitcoin/: client.rs  mod.rs
chain/src/bitcoin/modules/: coinbase.rs  link.rs  mod.rs  transfer.rs  tx_amount.rs
chain/src/evm/: mod.rs
chain/src/evm/modules/: mod.rs  transfer.rs
common/: Cargo.toml
common/src/: address.rs  banner.rs  constants.rs  errors.rs  lib.rs  progress.rs  settings.rs  u256.rs  utils.rs
common/src/cache/: mod.rs  rocksdb.rs
common/src/chain/: mod.rs  u256.rs
common/src/chain/bitcoin/: client.rs  mod.rs
common/src/chain/bitcoin/modules/: balance.rs  coinbase.rs  link.rs  mod.rs  relation.rs  relation_balance_transfer.rs  relation_no_change.rs  transfer.rs  tx_amount.rs
common/src/chain/evm/: mod.rs
common/src/chain/evm/modules/: balance.rs  erc20_balance.rs  erc20_transfer.rs  mod.rs  token_balance.rs  token_transfer.rs  transfer.rs
common/src/db/: mod.rs
common/src/db/migrations/: m20220101_000001_create_table_sanctioned_addresses.rs  m20230101_000001_create_cache.rs  m20230101_000001_create_configs.rs  m20230101_000001_create_leaders.rs  m20230101_000002_create_accounts.rs  m20230101_000002_create_networks.rs  m20230101_000003_create_accounts.rs  m20230101_000003_create_api_keys.rs  m20230101_000004_create_api_keys.rs  m20230101_000004_create_labels.rs  m20230101_000005_create_entities.rs  m20230101_000005_create_labels.rs  m20230101_000006_create_addresses.rs  m20230101_000006_create_labeled_addresses.rs  m20230101_000007_create_tags.rs  m20230101_000007_create_transactions.rs  m20230101_000008_create_entity_tag_map.rs  m20230101_000008_create_entity_tags.rs  mod.rs
common/src/models/: account.rs  address.rs  amount.rs  api_key.rs  balance.rs  cache.rs  config.rs  entity.rs  entity_tag.rs  entity_tag_map.rs  entity_tags.rs  label.rs  labeled_address.rs  leader.rs  link.rs  mod.rs  network.rs  relation.rs  sanctioned_address.rs  tag.rs  transaction.rs  transfer.rs  tx_amount.rs
common/src/warehouse/: clickhouse.rs  mod.rs
indexer/: Cargo.toml
indexer/src/: blocks.rs  indexer.rs  lib.rs  lists.rs  upstream.rs
scan/: Cargo.toml
scan/src/: lib.rs  lists.rs
server/: Cargo.toml
server/src/: error.rs  errors.rs  lib.rs  lists.rs  server.rs  utils.rs
server/src/handlers/: mod.rs
server/src/handlers/v0/: mod.rs
server/src/handlers/v0/accounts/: create.rs  delete.rs  get.rs  list.rs  update.rs
server/src/handlers/v0/addresses/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
server/src/handlers/v0/assets/: get.rs  mod.rs
server/src/handlers/v0/entities/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
server/src/handlers/v0/heartbeat/: get.rs  mod.rs
server/src/handlers/v0/info/: get.rs
server/src/handlers/v0/insights/: get.rs  mod.rs
server/src/handlers/v0/keys/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
server/src/handlers/v0/labels/: create.rs  delete.rs  get.rs  list.rs  update.rs
server/src/handlers/v0/networks/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
server/src/handlers/v0/related/: get.rs  mod.rs
server/src/handlers/v0/stats/: get.rs
server/src/handlers/v0/tags/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
server/src/handlers/v0/upstream/: get.rs
src/: banner.rs  lists.rs  log.rs  main.rs
