[package]
name = "barreleye"
description = "Self-hosted, multi-chain customer analytics & insights for businesses handling digital assets."
homepage = "https://barreleye.com"
version = "0.0.1"
license = "MPL-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/barreleye/barreleye"
keywords = ["blockchain", "cryptocurrency", "insights", "analytics", "kyc", "kyt"]

[[bin]]
name = "barreleye"
path = "src/main.rs"

[workspace]
members = [ "common", "indexer", "server" ]

[dependencies]
log = "0.4.0"
color-eyre = "0.6.2"
eyre = "0.6.8"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
console = "0.15.2"
regex = "1.7.0"
clap = { version = "4.0.29", features = ["cargo"] }
fern = { version = "0.6.1", features = ["colored"] }
tokio = { version = "1.23.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
reqwest = { version = "0.11.13", features = ["rustls-tls"] }

barreleye-common = { path = "./common", version = "0.0.1" }
barreleye-indexer = { path = "./indexer", version = "0.0.1" }
barreleye-server = { path = "./server", version = "0.0.1" }