[package]
name = "barreleye"
description = "Open-source blockchain analytics tool."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.com"
version = "0.0.1"
license = "AGPL-3.0"
edition = "2021"
readme = "README.md"
keywords = ["blockchain", "cryptocurrency", "insights", "analytics", "kyc"]

[[bin]]
name = "barreleye"
path = "src/main.rs"

[workspace]
members = [ "common", "indexer", "server" ]

[dependencies]
log = "0.4.17"
color-eyre = "0.6.2"
eyre = "0.6.8"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
console = "0.15.4"
regex = "1.7.0"
clap = { version = "4.0.32", features = ["cargo"] }
fern = { version = "0.6.1", features = ["colored"] }
tokio = { version = "1.24.1", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
reqwest = { version = "0.11.13", features = ["rustls-tls"] }

barreleye-common = { path = "./common", version = "0.0.1" }
barreleye-indexer = { path = "./indexer", version = "0.0.1" }
barreleye-server = { path = "./server", version = "0.0.1" }
