[package]
name = "barreleye"
description = "Open-source blockchain KYC."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.com"
version = "0.0.1"
license = "AGPL-3.0"
edition = "2021"
readme = "README.md"
keywords = ["blockchain", "cryptocurrency", "insights", "analytics", "kyc"]

[[bin]]
name = "barreleye"
path = "src/main.rs"

[workspace]
members = [ "common", "indexer", "server" ]

[dependencies]
log = "0.4.17"
color-eyre = "0.6.2"
eyre = "0.6.8"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
fern = { version = "0.6.1", features = ["colored"] }
tokio = { version = "1.25.0", features = ["full"] }

barreleye-common = { path = "./common", version = "0.0.1" }
barreleye-indexer = { path = "./indexer", version = "0.0.1" }
barreleye-server = { path = "./server", version = "0.0.1" }
