[package]
name = "barreleye-chain"
version = "0.0.1"
license = "MPL-2.0"
edition = "2021"
workspace = ".."

[dependencies]
eyre = "0.6.8"
hex = "0.4.3"
serde = "1.0.147"
serde_json = "1.0.87"
async-trait = "0.1.58"
futures = "0.3.25"
sea-orm = "0.10.2"
tokio = { version = "1.21.2", features = ["full"] }
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"
indicatif = "0.17.1"
derive_more = "0.99.17"
derive-new = "0.5.9"
convert_case = "0.6.0"
itertools = "0.10.5"
reqwest = { version = "0.11.12", features = ["json", "rustls-tls"] }

barreleye-common = { path = "../common", version = "0.0.1" }

[dependencies.ethers]
version = "1.0.0"
features = ["eip712", "abigen", "solc-full", "rustls"]