[package]
name = "barreleye-chain"
version = "0.0.1"
license = "MPL-2.0"
edition = "2021"
workspace = ".."

[dependencies]
eyre = "0.6.8"
serde = "1.0.147"
serde_json = "1.0.87"
async-trait = "0.1.58"
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }
indicatif = "0.17.1"
itertools = "0.10.5"
url = "2.3.1"
bitcoin = "0.29.2"
bitcoincore-rpc = "0.16.0"
reqwest = { version = "0.11.12", features = ["json", "rustls-tls"] }

barreleye-common = { path = "../common", version = "0.0.1" }

[dependencies.ethers]
version = "1.0.0"
features = ["eip712", "abigen", "solc-full", "rustls"]