[package]
name = "barreleye-chain"
version = "0.0.1"
license = "MPL-2.0"
edition = "2021"
workspace = ".."

[dependencies]
eyre = "0.6.8"
serde = "1.0.149"
serde_json = "1.0.89"
async-trait = "0.1.59"
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["rt"] }
indicatif = "0.17.2"
itertools = "0.10.5"
url = "2.3.1"
bitcoin = "0.29.2"
primitive-types = "0.12.1"
console = "0.15.2"
chrono = "0.4.23"
governor = "0.5.1"
num_cpus = "1.14.0"
base64 = "0.20.0"
derive_more = "0.99.17"
bitcoincore-rpc-json = "0.16.0"
reqwest = { version = "0.11.13", features = ["rustls-tls"] }
num-format = { version = "0.4.4", features = ["with-system-locale"] }
ethers = { version = "1.0.2", features = ["rustls"] }

barreleye-common = { path = "../common", version = "0.0.1" }