[package]
name = "barreleye-common"
description = "Open-source blockchain analytics tool."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.com"
version = "0.0.1"
license = "AGPL-3.0"
edition = "2021"
workspace = ".."

[dependencies]
async-trait = "0.1.63"
eyre = "0.6.8"
sea-orm-migration = "0.10.7"
nanoid = "0.4.0"
serde = "1.0.152"
log = "0.4.17"
config = "0.13.3"
derive_more = "0.99.17"
indicatif = "0.17.3"
serde_json = "1.0.91"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
url = "2.3.1"
console = "0.15.5"
exitcode = "1.1.2"
bitcoin = "0.29.2"
directories = "4.0.1"
rocksdb = "0.19.0"
rmp-serde = "1.1.1"
regex = "1.7.1"
governor = "0.5.1"
base64 = "0.21.0"
itertools = "0.10.5"
futures = "0.3.25"
bitcoincore-rpc-json = "0.16.0"
reqwest = { version = "0.11.14", features = ["rustls-tls"] }
tokio = { version = "1.24.2", features = ["full"] }
ethers = { version = "1.0.2", features = ["rustls"] }
clickhouse = { version = "0.11.2", features = ["uuid"] }
clap = { version = "4.1.1", features = ["cargo"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }

[dependencies.sea-orm]
version = "0.10.7"
features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls"
]
