[package]
name = "barreleye-indexer"
version = "0.0.1"
license = "MPL-2.0"
edition = "2021"
workspace = ".."

[dependencies]
eyre = "0.6.8"
serde = "1.0.152"
serde_json = "1.0.91"
async-trait = "0.1.60"
tokio = { version = "1.23.0", features = ["full"] }
bitcoin = "0.29.2"
console = "0.15.3"
num_cpus = "1.15.0"
governor = "0.5.1"
base64 = "0.20.0"
regex = "1.7.0"
bitcoincore-rpc-json = "0.16.0"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
reqwest = { version = "0.11.13", features = ["rustls-tls"] }
num-format = { version = "0.4.4", features = ["with-system-locale"] }

barreleye-common = { path = "../common", version = "0.0.1" }
