[package]
name = "barreleye-indexer"
description = "Open-source blockchain analytics tool."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.com"
version = "0.0.1"
license = "AGPL-3.0"
edition = "2021"
workspace = ".."

[dependencies]
eyre = "0.6.8"
serde = "1.0.152"
serde_json = "1.0.92"
async-trait = "0.1.64"
tokio = { version = "1.25.0", features = ["full"] }
bitcoin = "0.29.2"
console = "0.15.5"
num_cpus = "1.15.0"
governor = "0.5.1"
base64 = "0.21.0"
regex = "1.7.1"
bitcoincore-rpc-json = "0.16.0"
derive_more = "0.99.17"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
reqwest = { version = "0.11.14", features = ["rustls-tls"] }
num-format = { version = "0.4.4", features = ["with-system-locale"] }

barreleye-common = { path = "../common", version = "0.0.1" }

[dependencies.sea-orm]
version = "0.10.7"
features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls"
]
