[package]
name = "barreleye-server"
version = "0.0.1"
license = "MPL-2.0"
edition = "2021"
workspace = ".."

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
log = "0.4.17"
eyre = "0.6.8"
axum = "0.6.1"
derive_more = "0.99.17"
serde = "1.0.151"
console = "0.15.2"
serde_json = "1.0.91"
hyper = "0.14.23"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
tower = { version = "0.4.13", features = ["timeout"] }

barreleye-common = { path = "../common", version = "0.0.1" }

[dependencies.sea-orm]
version = "0.10.6"
features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls"
]
