[package]
name = "barreleye-server"
description = "Open-source blockchain analytics tool."
repository = "https://github.com/barreleye/barreleye"
documentation = "https://docs.rs/barreleye"
homepage = "https://barreleye.com"
version = "0.0.1"
license = "AGPL-3.0"
edition = "2021"
workspace = ".."

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
log = "0.4.17"
eyre = "0.6.8"
axum = "0.6.6"
axum-extra = { version = "0.5.0", features = ["query"] }
derive_more = "0.99.17"
serde = "1.0.152"
console = "0.15.5"
serde_json = "1.0.93"
hyper = "0.14.24"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
tower = { version = "0.4.13", features = ["timeout"] }

barreleye-common = { path = "../common", version = "0.0.1" }

[dependencies.sea-orm]
version = "0.11.0"
features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-rustls"
]
